<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50">

            <ImageView
                android:id="@+id/imageViewWeateherIcon"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_alignBottom="@+id/textViewTemp"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="26dp"
                android:paddingTop="25dp"
                app:srcCompat="@drawable/fronticon" />


        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:background="@color/colorPrimary">

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:orientation="vertical"
                android:padding="10dp"
                android:weightSum="100">

                <EditText
                    android:id="@+id/editTextLoginEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:hint="@string/validation_email_hint"
                    android:inputType="textEmailAddress"/>

                <EditText
                    android:id="@+id/editTextLoginPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="25"
                    android:hint="@string/validation_password_hint"
                    android:inputType="textPassword"/>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="20dp"
                    android:layout_weight="25"
                    android:text="@string/button_login" />
                <TextView
                    android:id="@+id/textViewNotMember"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="15dp"
                    android:layout_weight="25"
                    android:text="@string/not_member_yet"
                    android:textSize="16sp"
                    android:textAlignment="center"
                    />
            </LinearLayout>
            <ProgressBar
                android:id="@+id/loginProgressBar"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
        </RelativeLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>