<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WeatherActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="25">

            <ImageView
                android:id="@+id/imageViewWeateherIcon"
                android:layout_width="104dp"
                android:layout_height="114dp"
                android:layout_marginStart="152dp"
                android:layout_marginLeft="152dp"
                android:layout_marginTop="68dp"
                android:paddingTop="25dp"
                android:src="@drawable/noweather"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewTemp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/weather_no_temp"
                android:textAlignment="center"
                android:textSize="75dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageViewWeateherIcon" />

            <TextView
                android:id="@+id/textViewDesc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="124dp"
                android:layout_marginLeft="124dp"
                android:layout_marginTop="4dp"
                android:text="@string/weather_no_description"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewTemp" />

            <TextView
                android:id="@+id/textViewCity"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="152dp"
                android:layout_marginLeft="152dp"
                android:text="@string/weather_no_city"
                android:textStyle="italic"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewDesc" />


        </android.support.constraint.ConstraintLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/favorite_cities_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="200dp">

        </android.support.v7.widget.RecyclerView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>